--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,8 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.1'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
-    compile group: 'com.google.guava', name: 'guava', version: '28.2-jre'
+    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.30'
 
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
