--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
 dependencies {
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.30'
+    compile group: 'com.google.guava', name: 'guava', version: '28.2-jre'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
