--- a/src/main/resources/clash.properties
+++ b/src/main/resources/clash.properties
@@ -1,1 +1,4 @@
-synchronizer.cas.wait_milliseconds=3000
+#CASSynchronizer循环等待时间
+clash.cas_synchronizer.wait_total=3000
+#CASSynchronizer单次等待时间
+clash.cas_synchronizer.wait_each=20
